tests/src/frontend/typechecking/invalid/overridable4.sk
base class Foo {
  fun doIt(): void {
    void
  }
}
base class Traity {
  overridable fun doIt(): void {
    void
  }
}
class CFoo() extends Foo, Traity {
  fun doIt from Traity;
}
